# Mira

./: README.md  index.html  package.json  todo.txt
.cargo/: config.windows.toml
.github/workflows/: release.yml
scripts/: protoc-wrapper.cmd  protoc-wrapper.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  extractors.rs  gemini.rs  indexing.rs  lib.rs  main.rs  media.rs  models.rs  preview.rs  search.rs  semantic.rs  shell.rs  state.rs  utils.rs  watchers.rs
src-tauri/src/storage/: content.rs  files.rs  jobs.rs  media.rs  mod.rs  roots.rs  schema.rs  semantic.rs  settings.rs
src/app/: App.tsx  constants.ts  types.ts  useAppController.ts
src/components/: cards.tsx  icons.tsx  navigation.tsx  preview.tsx  results.tsx
src/lib/: appHelpers.ts
src/views/: HomeView.tsx  ResultsView.tsx  SettingsView.tsx  SourcesView.tsx
