[package]
name = "mira"
version = "0.1.1"
description = "A local-first desktop search app for natural-language file discovery"
authors = ["heidar_an"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mira_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
protoc-bin-vendored = "3"
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
arrow-array = "57.2"
arrow-schema = "57.2"
fastembed = "5.13"
futures = "0.3"
lancedb = "0.26"
notify = "6"
once_cell = "1.21"
pdf_oxide = { version = "0.3.17", features = ["parallel"] }
rayon = "1.10"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
walkdir = "2"
zip = "2"
image = "0.25.10"
symphonia = { version = "0.5.5", features = ["all"] }
hound = "3.5.1"
